# fpbot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  add_meta.py  ampel_connector.py  ampel_requirements  ampel_requirements.txt  bulk.py  bulk_piecewise.py  commandline_interface.py  connectors.py  cosmology.py  delete_from_db.py  docker-compose.yml  drop_db.py  forced_photometry.py  forcedphotometry  forcedphotometry.py  fps_slackbot  fps_slackbot_spawn_screen_session  fps_slackbot_spawn_screen_session_debug  fps_start_slackbot  parallel.py  pipeline.py  plot.py  pyproject.toml  requirements.txt  run.py  saltfit.py  setup.py  slackbot.py  slackbot_realtime.py  slackbot_spawn_screen_session  slackbot_spawn_screen_session.sh  start_slackbot
.github/workflows/: continous_integration.yml
fpbot/: api.py  baseline.py  check_files.py  clean_lc.py  connectors.py  cosmology.py  credentials.py  database.py  pipeline.py  plot.py  thumbnails.py  utils.py
fpbot/data/: marshal_dummyfile.csv  zp_thresholds_quadID.txt
tests/: test_pipeline.py
ztffps/: api.py  baseline.py  check_files.py  clean_lc.py  connectors.py  cosmology.py  credentials.py  database.py  fp.py  io.py  pipeline.py  plot.py  run.py  saltfit.py  setup.py  slackbot.py  slackbot_realtime.py  slackbot_spawn_screen_session.sh  slackbot_spawn_screen_session_debug.sh  start_slackbot.py  thumbnail.py  thumbnails.py  utils.py
ztffps/data/: ztf_host_w_redshift_20190510.csv
